# threemf2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
threemf2/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml
threemf2-benches/: Cargo.toml  bench_config.json  slice_bench_config.json
threemf2-benches/benches/: reader.rs  threemf_reader_multi.rs  threemf_reader_slices.rs  threemf_reader_standard.rs  threemf_writer.rs
threemf2-tests/: Cargo.toml
threemf2-tests/tests/: model_query.rs  third_party_read.rs
threemf2-thumbnail/: Cargo.toml
threemf2-thumbnail/examples/: thumbnail_generation.rs
threemf2-thumbnail/src/: bbox.rs  beam_lattice_pipeline.rs  camera.rs  lib.rs  mesh_pipeline.rs  rgba.rs  thumbnail_generator.rs
threemf2-thumbnail/src/euc/: buffer.rs  mod.rs  pipeline.rs  primitives.rs
threemf2-thumbnail/src/euc/rasterizer/: lines.rs  mod.rs  triangles.rs
threemf2-thumbnail/src/euc/sampler/: linear.rs  mod.rs
threemf2-thumbnail/src/thumbnail/: mod.rs  thumbnail_generator.rs
threemf2-thumbnail/tests/data/: 2995 Items of Box.3mf
threemf2-xsd-validation/: Cargo.toml
threemf2-xsd-validation/tests/: beamlattice_validation.rs  booleanoperations_validation.rs  combined_validation.rs  core_validation.rs  displacement_validation.rs  material_validation.rs  production_validation.rs  slice_validation.rs  trianglesets_validation.rs  validation_utils.rs
threemf2-xsd-validation/tests/data/xsd/: 3mf-beamlattice-1.2.0.xsd  3mf-beamlattice-balls-2020-07.xsd  3mf-boolean-operations-1.1.1.xsd  3mf-core-1.3.0.xsd  3mf-displacement-1.0.0.xsd  3mf-material-1.2.1.xsd  3mf-production-1.2.0.xsd  3mf-production-alternatives-2021-04.xsd  3mf-slice-1.0.2.xsd  3mf-trianglesets-2021-07.xsd
threemf2/examples/: beamlattice_write.rs  boolean.rs  boolean_write.rs  builder_beamlattice_example.rs  builder_example.rs  core-no-default-features.rs  io_memory_optimized_read.rs  io_speed_optimized_read.rs  package_memory_optimized_read.rs  query_example.rs  slice_write.rs  string_extraction.rs  thumbnail_generation.rs  unpack.rs  write.rs
threemf2/src/: lib.rs  threemf_namespaces.rs
threemf2/src/core/: beamlattice.rs  boolean.rs  build.rs  builder.rs  component.rs  constants.rs  displacement.rs  material.rs  mesh.rs  metadata.rs  mod.rs  model.rs  object.rs  object_kind.rs  query.rs  resources.rs  slice.rs  transform.rs  triangle_set.rs  types.rs
threemf2/src/io/: builder.rs  content_types.rs  error.rs  mod.rs  query.rs  relationship.rs  threemf_package.rs  threemf_package_lazy_reader.rs  thumbnail_generator.rs  thumbnail_handle.rs  utils.rs  validator.rs  validator_rules.rs  zip_utils.rs
threemf2/src/model/: builder.rs  mod.rs  query.rs
threemf2/src/model/domain/: beamlattice.rs  boolean.rs  build.rs  component.rs  displacement.rs  material.rs  mesh.rs  metadata.rs  mod.rs  model.rs  object.rs  resources.rs  slice.rs  transform.rs  triangle_set.rs  types.rs
threemf2/src/package/: builder.rs  error.rs  mod.rs  query.rs  threemf_package.rs  threemf_package_lazy_reader.rs
threemf2/src/package/domain/: content_types.rs  mod.rs  relationship.rs  thumbnail_handle.rs  utils.rs  validator.rs  validator_rules.rs  zip_utils.rs
threemf2/src/thumbnail/: mesh_pipeline.rs  thumbnail_generator.rs
threemf2/tests/: beamlattice_io.rs  boolean_io.rs  core_io.rs  displacement_io.rs  material_io.rs  production_io.rs  roundtrip.rs  slice_io.rs
threemf2/tests/data/: mesh-booleans-operations-material.3mf  mgx-core-prod-beamlattice-material-displacement-mesh.3mf
