[package]
name = "threemf2-benches"
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
license = "MIT or Apache-2.0"

[dependencies]
instant-xml = { version = "0.6.0" }
serde-roxmltree = { version = "0.10.0" }
threemf2 = { path = "../threemf2", features = [
    "io-memory-optimized-read",
    "io-speed-optimized-read",
    "io-write",
] }
lib3mf-core = { version = "0.4.0", features = ["parallel"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dhat = "0.3.3"

[features]
default = []
# memory-optimized-read-experimental = [
#     "threemf2/memory-optimized-read-experimental",
# ]
enable-alloc-check = []
benchmark-all = []

[[bench]]
name = "reader"
harness = false

[[bench]]
name = "threemf_reader_multi"
harness = false

[[bench]]
name = "threemf_writer"
harness = false
