[package]
name = "threemf2-tests"
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
license = "MIT or Apache-2.0"

[dependencies]
threemf2 = { path = "../threemf2", features = [
    "package-write",
    "io-memory-optimized-read",
    "io-speed-optimized-read",  # deprecated
    "io-lazy-read",
] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde-roxmltree = { version = "0.11.1" }
instant-xml = { version = "0.7.5" }
# instant-xml = { version = "0.7.4", path = "../../../../instant-xml/instant-xml/instant-xml" }
